# privateprofilestring

./: .gitignore  Makefile  README.md  ctest.c  profile.c  rmspace.c  rmspace.h  stptok.c  stptok.h
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  profile.c  profile.h  rmspace.c  stptok.c  stptok.h
test/: CMakeLists.txt  Makefile
test/src/profile/: CMakeLists.txt
test/src/profile/src/: main.c
test/src/rmspace/: CMakeLists.txt
test/src/rmspace/src/: main.c
test/src/stptok/: CMakeLists.txt
test/src/stptok/src/: main.c
